syntax = "proto3";

package order;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.bojan.ecommerce.order";

enum Status {
  STATUS_PENDING = 0;
  STATUS_CONFIRMED = 1;
  STATUS_SHIPPED = 2;
  STATUS_DELIVERED = 3;
  STATUS_CANCELLED = 4;
  STATUS_RETURNED = 5;
  STATUS_REFUNDED = 6;
}

message OrderedProductResponse {
  string productUid = 1;
  string orderUid = 2;
  int32 quantity = 3;
}

message OrderRequest {
  string uid = 1;
  string customerId = 2;
  repeated OrderedProductResponse orderedProducts = 3;
  Status status = 4;
  string shippingAddress = 5;
  string trackingNumber = 6;
}

message CreateOrderRequest {
  string customerId = 1;
  repeated OrderedProductResponse orderedProducts = 2;
  Status status = 4;
  string shippingAddress = 5;
}

message OrderResponse {
  string uid = 1;
  string customerId = 2;
  repeated OrderedProductResponse orderedProducts = 3;
  Status status = 4;
  string shippingAddress = 5;
  string trackingNumber = 6;
}

message ListCustomerOrderHistoryRequest {
  string customerId = 1;
}

message ListOrdersResponse {
  repeated OrderResponse orders = 1;
}

service OrderService {
  rpc GetOrder (OrderRequest) returns (OrderResponse);
  rpc ListCustomerOrderHistory (ListCustomerOrderHistoryRequest) returns (stream OrderResponse);
  rpc ListOrders (OrderRequest) returns (ListOrdersResponse);
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc UpdateOrder (OrderRequest) returns (OrderResponse);
  rpc DeleteOrder(OrderRequest) returns (google.protobuf.Empty);
}